# ratify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONCEPTS.md  INTEGRATION.md
examples/: 01_quickstart.py  02_rag_grounding.py  03_multiagent_budget.py
src/ratify/: __init__.py  checks.py  clause.py  context.py  contract.py  engine.py  enums.py  exceptions.py  guard.py  judge.py  judges.py  resources.py  trace.py
src/ratify/adapters/: __init__.py  generic.py  langchain.py
tests/: conftest.py  test_adapters_generic.py  test_adapters_langchain.py  test_checks.py  test_clause.py  test_contract.py  test_engine.py  test_examples.py  test_guard.py  test_judge.py  test_judges.py  test_public_api.py  test_resources.py  test_trace.py
